@@ -4,4 +4,4 @@ set -eu
 
 scriptdir=`dirname ${BASH_SOURCE[0]}`
 
-${RELL_JAVA:-java} -cp "$scriptdir/lib/*" net.postchain.AppKt $@
+${RELL_JAVA:-java} --illegal-access=permit -cp "$scriptdir/lib/*" net.postchain.AppKt $@
